--- a/client/src/app/image-list/image-list.component.html
+++ b/client/src/app/image-list/image-list.component.html
@@ -4,4 +4,7 @@
       <img mat-card-image src="{{image.thumbnailURL}}">
     </mat-card>
   </div>
+  <div fxFlex="10" fxFlex.md="16.6" fxFlex.sm="25" fxFlex.xs="33.3">
+    <button [disabled]="!hasMore" (click)="onClickMore()">more...</button>
+  </div>
 </div>
