--- a/client/src/app/image-list/image-list.component.html
+++ b/client/src/app/image-list/image-list.component.html
@@ -5,6 +5,6 @@
     </mat-card>
   </div>
   <div fxFlex="10" fxFlex.md="16.6" fxFlex.sm="25" fxFlex.xs="33.3">
-    <button [disabled]="!hasMore" (click)="onClickMore()">more...</button>
+    <button mat-button [disabled]="!hasMore" (click)="onClickMore()">more...</button>
   </div>
 </div>
