Support auto loading

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span>イケダム1日1絵</span>
+  <span>ミニダム1日1絵</span>
 </mat-toolbar>
 <mat-card><mat-card-content>
   <router-outlet></router-outlet>
