--- a/client/src/app/image-detail/image-detail.dialog.scss
+++ b/client/src/app/image-detail/image-detail.dialog.scss
@@ -1,17 +1,23 @@
-img {
-  max-width: 80vw;
-  max-height: 30vw;
+.image-container {
+  display: flex;
+  .image {
+    display: inline-block;
+    border: 0;
+    margin-left: auto;
+    margin-right: auto;
+    &:active {
+      border: 0;
+    }
+    &:hover {
+      border: 0;
+    }
+    img {
+      max-width: 80vw;
+      max-height: 30vw;
+    }
+  }
 }
 
-.image {
-  display: inline-block;
-  border: 0;
-  margin-left: auto;
-  margin-right: auto;
-  &:active {
-    border: 0;
-  }
-  &:hover {
-    border: 0;
-  }
+mat-chip {
+  margin: 0.2em;
 }
