--- a/client/src/app/image-list/image-list.component.html
+++ b/client/src/app/image-list/image-list.component.html
@@ -2,7 +2,7 @@
 <div fxLayout="row wrap" fxLayoutAlign="center center">
   <div fxFlex="10" fxFlex.md="16.6" fxFlex.sm="25" fxFlex.xs="33.3" *ngFor="let image of imageList">
     <mat-card>
-      <a routerLink="./image/{{image.id}}"><img mat-card-image src="{{image.thumbnailURL}}" alt="{{image.id}}"></a>
+      <a class="thumbnail-link" mat-card-image routerLink="./image/{{image.id}}"><img mat-card-image src="{{image.thumbnailURL}}" alt="{{image.id}}"></a>
     </mat-card>
   </div>
   <div fxFlex="10" fxFlex.md="16.6" fxFlex.sm="25" fxFlex.xs="33.3">
