--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,12 @@
 <mat-toolbar>
   <span>ミニダム1日1絵</span>
+  <span class="toolbar-spacer"></span>
+  <ng-container *ngIf="session?.login">
+    <span>管理者モード</span>
+  </ng-container>
+  <ng-container *ngIf="!session?.login">
+    <span><button mat-button (click)="onClickLogin()">ログイン</button></span>
+  </ng-container>
 </mat-toolbar>
 <mat-card><mat-card-content>
   <router-outlet></router-outlet>
