--- a/client/src/app/image-detail/image-detail.dialog.html
+++ b/client/src/app/image-detail/image-detail.dialog.html
@@ -3,25 +3,72 @@
   <div class="image-container">
     <a class="image" href="{{image.imageURL}}" target="_blank"><img src="{{image.imageURL}}" alt="{{image.id}}" /></a>
   </div>
-  <div>
-    <mat-chip *ngFor="let tag of image.tagList">{{tag}}</mat-chip>
+  <div class="tags" *ngIf="!edit">
+    <mat-chip-set>
+      <mat-chip *ngIf="image.withIkedam && !image.withMinidam">イケダム</mat-chip>
+      <mat-chip *ngIf="image.withMinidam && !image.withIkedam">ミニダム</mat-chip>
+      <mat-chip *ngIf="image.withIkedam && image.withMinidam">イケダム&ミニダム</mat-chip>
+      <mat-chip *ngFor="let tag of image.tagList">{{tag}}</mat-chip>
+    </mat-chip-set>
+  </div>
+  <div class="tags" *ngIf="editImage !== undefined">
+    <mat-checkbox [(ngModel)]="editImage.withIkedam">イケダム</mat-checkbox>
+    <mat-checkbox [(ngModel)]="editImage.withMinidam">ミニダム</mat-checkbox>
+    <mat-chip-set>
+      <mat-chip *ngFor="let tag of editImage.tagList"
+        [color]="image.tagList.includes(tag)?undefined:'accent'">
+        {{tag}}
+        <button mat-icon-button (click)="onDeleteTag(tag)"><mat-icon>delete</mat-icon></button>
+      </mat-chip>
+      <mat-chip *ngIf="addingTag !== undefined">
+        <input [(ngModel)]="addingTag" #addingTagElement (blur)="onAddingTagBlur()">
+      </mat-chip>
+    </mat-chip-set>
+    <button mat-icon-button (click)="onAddTag()"><mat-icon>add_circle_outline</mat-icon></button>
   </div>
   <dl>
     <dt>説明</dt>
-      <dd>{{image.description}}</dd>
+      <dd *ngIf="!edit">{{image.description}}</dd>
+      <dd *ngIf="editImage !== undefined">
+        <mat-form-field>
+          <textarea matInput [(ngModel)]="editImage.description"></textarea>
+        </mat-form-field>
+      </dd>
     <dt>制作メモ</dt>
-      <dd>{{image.makingNote}}</dd>
+      <dd *ngIf="!edit">{{image.makingNote}}</dd>
+      <dd *ngIf="editImage !== undefined">
+        <mat-form-field>
+          <textarea matInput [(ngModel)]="editImage.makingNote"></textarea>
+        </mat-form-field>
+      </dd>
     <ng-container *ngIf="image.twitterURL !== ''">
       <dt>Twitter</dt>
-        <dd><a href="{{image.twitterURL}}" target="_blank">{{image.tweetComment?image.tweetComment:'Twitter'}}</a></dd>
-    </ng-container>
+        <dd *ngIf="!edit"><a href="{{image.twitterURL}}" target="_blank">{{image.tweetComment?image.tweetComment:'Twitter'}}</a></dd>
+        <dd *ngIf="editImage !== undefined">
+          <mat-form-field>
+            <mat-label>URL</mat-label>
+            <input matInput [(ngModel)]="editImage.twitterURL">
+          </mat-form-field>
+        </dd>
+        <dd *ngIf="editImage !== undefined">
+          <mat-form-field>
+            <mat-label>コメント</mat-label>
+            <input matInput [(ngModel)]="editImage.tweetComment">
+          </mat-form-field>
+        </dd>
+      </ng-container>
     <dt>作成日</dt>
       <dd>{{image.publishTime.toISOString()}}</dd>
     <dt>更新日</dt>
       <dd>{{image.updateTime.toISOString()}}</dd>
     </dl>
 </div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close (click)="onClose()">Close</button>
+<div mat-dialog-actions *ngIf="!edit">
+  <button mat-button mat-dialog-close (click)="onClose()">閉じる</button>
+  <button mat-button (click)="onEditStart()">編集</button>
+</div>
+<div mat-dialog-actions *ngIf="edit">
+  <button mat-button (click)="onEditSave()">保存</button>
+  <button mat-button (click)="onEditCancel()">キャンセル</button>
 </div>
 </mat-card-content></mat-card>
