--- a/client/src/app/image-detail/image-detail.dialog.scss
+++ b/client/src/app/image-detail/image-detail.dialog.scss
@@ -3,6 +3,7 @@
   .image {
     display: inline-block;
     border: 0;
+    border-color: transparent;
     margin-left: auto;
     margin-right: auto;
     &:active {
@@ -18,6 +19,17 @@
   }
 }
 
+.tags {
+  display: flex;
+  align-items: center;
+}
+
 mat-chip {
   margin: 0.2em;
+  display: flex;
+  align-items: center;
+}
+
+.mdc-checkbox {
+  padding-right: 0;
 }
