--- a/client/src/app/image-detail/image-detail.dialog.html
+++ b/client/src/app/image-detail/image-detail.dialog.html
@@ -8,7 +8,7 @@
       <mat-chip *ngIf="image.withIkedam && !image.withMinidam">イケダム</mat-chip>
       <mat-chip *ngIf="image.withMinidam && !image.withIkedam">ミニダム</mat-chip>
       <mat-chip *ngIf="image.withIkedam && image.withMinidam">イケダム&ミニダム</mat-chip>
-      <mat-chip *ngFor="let tag of image.tagList">{{tag}}</mat-chip>
+      <mat-chip *ngFor="let tag of image.tagList"><a [routerLink]="['tag', tag]">{{tag}}</a></mat-chip>
     </mat-chip-set>
   </div>
   <div class="tags" *ngIf="editImage !== undefined">
