--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span><a routerLink="/">ミニダム1日1絵</a></span>
+  <span><a mat-button routerLink="/">ミニダム1日1絵</a></span>
   <span class="toolbar-spacer"></span>
   <ng-container *ngIf="session?.login">
     <span>管理者モード</span>
