--- a/client/src/app/image-detail/image-detail.dialog.html
+++ b/client/src/app/image-detail/image-detail.dialog.html
@@ -1,4 +1,10 @@
 <mat-card><mat-card-content>
+<div style="text-align: right;">
+  <a mat-button routerLink="/image/{{image.id}}" target="_blank">
+    <mat-icon>open_in_new</mat-icon>
+    別タブで開く
+  </a>
+</div>
 <div mat-dialog-content>
   <app-image-detail-content [image]="image" [imageEditor]="imageEditor" />
 </div>
