--- a/client/src/app/image-detail/image-detail.component.html
+++ b/client/src/app/image-detail/image-detail.component.html
@@ -1,8 +1,15 @@
-<app-image-detail-content [image]="image" [imageEditor]="imageEditor" />
-<div *ngIf="!imageEditor.edit">
-  <button mat-button [disabled]="!session?.login" (click)="onEditStart()">編集</button>
+<div class="buttons" *ngIf="!imageEditor.edit">
+  <button mat-stroked-button [disabled]="!session?.login" (click)="onEditStart()">編集</button>
 </div>
-<div *ngIf="imageEditor.edit">
-  <button mat-button (click)="onEditSave()">保存</button>
-  <button mat-button (click)="onEditCancel()">キャンセル</button>
+<div class="buttons" *ngIf="imageEditor.edit">
+  <button mat-stroked-button color="primary" (click)="onEditSave()">保存</button>
+  <button mat-stroked-button (click)="onEditCancel()">キャンセル</button>
+</div>
+<app-image-detail-content [image]="image" [imageEditor]="imageEditor" />
+<div class="buttons" *ngIf="!imageEditor.edit">
+  <button mat-stroked-button [disabled]="!session?.login" (click)="onEditStart()">編集</button>
+</div>
+<div class="buttons" *ngIf="imageEditor.edit">
+  <button mat-stroked-button color="primary" (click)="onEditSave()">保存</button>
+  <button mat-stroked-button (click)="onEditCancel()">キャンセル</button>
 </div>
