--- a/client/src/app/image-detail/image-detail.content.scss
+++ b/client/src/app/image-detail/image-detail.content.scss
@@ -14,12 +14,12 @@
     }
     img {
       max-width: 80vw;
-      max-height: 80vw;
+      max-height: 80vh;
     }
   }
 }
 .editing .image-container .image img {
-  max-height: 30vw;
+  max-height: 30vh;
 }
 
 .tags {
