Fix edit issue on dialog

--- a/client/src/app/image-detail/image-detail.content.html
+++ b/client/src/app/image-detail/image-detail.content.html
@@ -1,4 +1,4 @@
-<div [class.editing]="imageEditor.edit">
+<div class="{{imageClass}}" [class.editing]="imageEditor.edit">
   <div class="image-container">
     <a class="image" href="{{image.imageURL}}" target="_blank"><img src="{{image.imageURL}}" alt="{{image.id}}" /></a>
   </div>
