--- a/client/src/app/image-detail/image-detail.content.scss
+++ b/client/src/app/image-detail/image-detail.content.scss
@@ -21,6 +21,10 @@
 .editing .image-container .image img {
   max-height: 30vh;
 }
+.dialog .image-container .image img {
+  max-height: 30vh;
+}
+
 
 .tags {
   display: flex;
