--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
   <span><a mat-button routerLink="/">ミニダム1日1絵</a></span>
   <span><a mat-button routerLink="/tag">タグ</a></span>
+  <ng-container *ngIf="session?.login">
+    <span><a mat-button routerLink="/tag/@assign">タグ付け</a></span>
+  </ng-container>
   <span class="toolbar-spacer"></span>
   <ng-container *ngIf="session?.login">
     <span>管理者モード</span>
