--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,17 +1,30 @@
-<mat-toolbar>
-  <span><a mat-button routerLink="/">ミニダム1日1絵</a></span>
-  <span><a mat-button routerLink="/tag">タグ</a></span>
-  <ng-container *ngIf="session?.login">
-    <span><a mat-button routerLink="/tag/@assign">タグ付け</a></span>
-  </ng-container>
-  <span class="toolbar-spacer"></span>
-  <ng-container *ngIf="session?.login">
-    <span>管理者モード</span>
-  </ng-container>
-  <ng-container *ngIf="!session?.login">
-    <span><button mat-button (click)="onClickLogin()">ログイン</button></span>
-  </ng-container>
-</mat-toolbar>
-<mat-card><mat-card-content>
-  <router-outlet></router-outlet>
-</mat-card-content></mat-card>
+<mat-sidenav-container>
+  <mat-sidenav #snav mode="push" [fixedInViewport]="true">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/tag">タグ</a>
+      <ng-container *ngIf="session?.login">
+        <a mat-list-item routerLink="/tag/@assign">タグ付け</a>
+      </ng-container>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar>
+      <button mat-icon-button class="for-sp" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+      <span><a mat-button routerLink="/">ミニダム1日1絵</a></span>
+      <span class="sp-hide"><a mat-button routerLink="/tag">タグ</a></span>
+      <ng-container *ngIf="session?.login">
+        <span class="sp-hide"><a mat-button routerLink="/tag/@assign">タグ付け</a></span>
+      </ng-container>
+      <span class="toolbar-spacer"></span>
+      <ng-container *ngIf="session?.login">
+        <span>管理者モード</span>
+      </ng-container>
+      <ng-container *ngIf="!session?.login">
+        <span><button mat-button (click)="onClickLogin()">ログイン</button></span>
+      </ng-container>
+    </mat-toolbar>
+    <mat-card><mat-card-content>
+      <router-outlet></router-outlet>
+    </mat-card-content></mat-card>
+  </mat-sidenav-content>
+</mat-sidenav-container>
