--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,8 +24,18 @@ dt {
   text-decoration: underline;
 }
 
+button[mat-icon-button].for-sp {
+  display: none;
+}
+
 @media (max-width: 767px) {
   dd {
     margin-left: 0;
+  }
+  .sp-hide {
+    display: none;
+  }
+  button[mat-icon-button].for-sp {
+    display: inline-block;
   }
 }
